<resources>
    <string name="app_name">TrackMe</string>
    <string name="title_activity_workout">My Workouts</string>
    <string name="title_activity_tracking">Track Me</string>

    <!--require permission-->
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="start_record">Start</string>
    <string name="btn_record">Record</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_close">Close</string>
    <string name="txt_start">Start:</string>
    <string name="txt_finish">Finish:</string>
    <string name="txt_distance">Distance:</string>
    <string name="txt_screenshot">ScreenShot</string>
    <string name="txt_empty_workout">You don\'t have any workouts</string>
    <string name="activity_review_title">Review</string>
    <string name="init_distance">0m</string>
    <string name="init_counting_time">00:00:00s</string>
    <string name="counting_time_template">%dh:%dm:%ds</string>
    <string name="txt_start_point">Start</string>
    <string name="txt_end_point">Finish</string>
    <string name="init_speed">0 km/h</string>
    <string name="txt_avg_speed">Average Speed:</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>
    <string name="active_time">Active time:</string>
    <string name="open_app">Open App</string>
    <string name="notification_title">TrackMe App Recording</string>
</resources>